Fix popup visibility

--- a/webapp/src/styles/ui-components.scss
+++ b/webapp/src/styles/ui-components.scss
@@ -111,9 +111,13 @@
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
 }
 
 .popup {
+  pointer-events: auto;
   display: flex;
   flex-direction: column;
   position: fixed;
